Deploying v2 to GREEN environment

--- a/nginx-blue-green.conf
+++ b/nginx-blue-green.conf
@@ -1,12 +1,9 @@
 # nginx-blue-green.conf
 # Define the two upstream servers (Blue and Green)
 upstream app_backend {
-    # Jenkins will modify this file to switch which server is active.
-    # Initially, we point to the BLUE environment running on port 3001
-    server localhost:3001; 
-    # server localhost:3002;  <-- GREEN is commented out initially
+    # Use 172.17.0.1 (the common IP for the host gateway on the default Docker network)
+    server 172.17.0.1:3001; 
 }
-
 server {
     listen 80; # Nginx listens inside the container on port 80
     server_name localhost;
